<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

    <RelativeLayout
        android:id="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="?attr/colorPrimary">

        <ImageButton
            android:id="@+id/button_back"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:padding="5dp"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:scaleType="fitCenter"
            android:background="#0000"
            android:src="@drawable/back"/>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/action_bar">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:shrinkColumns="0, 1"
            android:stretchColumns="0, 1">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/shadow">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="2">

                    <TextView
                        android:id="@+id/title1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:padding="3dp"
                        android:background="#2000"
                        android:text="@string/title_location"
                        android:textColor="#000"
                        android:textSize="20sp"/>

                    <TextView
                        android:id="@+id/body1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginBottom="10dp"
                        android:padding="3dp"
                        android:background="#2555"
                        android:text="@string/body_location"
                        android:textColor="#000"
                        android:textSize="15sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1">

                    <Button
                        android:id="@+id/stop_service"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/button_location"
                        android:textColor="#000"
                        android:textSize="20sp" />

                </LinearLayout>

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/shadow">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="2">

                    <TextView
                        android:id="@+id/title2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:padding="3dp"
                        android:background="#2000"
                        android:text="@string/title_background"
                        android:textColor="#000"
                        android:textSize="30sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginStart="20dp"
                        android:layout_marginBottom="10dp"
                        android:padding="3dp"
                        android:background="#2555">

                        <TextView
                            android:id="@+id/body2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/body_background"
                            android:textColor="#000"
                            android:textSize="25sp" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1">

                    <Switch
                        android:id="@+id/switch2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:checked="true"/>

                </LinearLayout>

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/shadow">


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="2">

                    <TextView
                        android:id="@+id/title3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:padding="3dp"
                        android:layout_gravity="center_vertical"
                        android:background="#2555"
                        android:text="@string/title_stop_application"
                        android:textColor="#000"
                        android:textSize="20sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1">

                    <Button
                        android:id="@+id/stop_application"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/button_stop_application"
                        android:textColor="#000"
                        android:textSize="25sp" />

                </LinearLayout>

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/shadow">


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="2">

                    <TextView
                        android:id="@+id/title4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:padding="3dp"
                        android:layout_gravity="center_vertical"
                        android:background="#2555"
                        android:text="@string/title_demo"
                        android:textColor="#000"
                        android:textSize="30sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1">

                    <Switch
                        android:id="@+id/switch3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:checked="false"/>

                </LinearLayout>

            </TableRow>

            <TableRow
                android:id="@+id/secret_row"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:visibility="invisible"
                android:background="@drawable/shadow">

                <EditText
                    android:id="@+id/edit_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:padding="3dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="2"
                    android:background="#2555"
                    android:textColor="#000"
                    android:textSize="20sp"
                    android:hint="@string/hint_server_url"
                    android:importantForAutofill="no"
                    android:inputType="text" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1">

                    <Button
                        android:id="@+id/button_edit_reload"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="0dp"
                        android:layout_weight="1"
                        android:text="@string/button_server_start"
                        android:textColor="#000"
                        android:padding="0dp"
                        android:textSize="15sp" />

                    <Button
                        android:id="@+id/button_edit_set"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="0dp"
                        android:layout_weight="1"
                        android:text="@string/button_server_end"
                        android:textColor="#000"
                        android:padding="0dp"
                        android:textSize="15sp" />

                </LinearLayout>

            </TableRow>

        </TableLayout>

    </ScrollView>

</RelativeLayout>